<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.mprog.npuzzle.MainActivity" >

    <item
        android:id="@+id/easy"
        android:orderInCategory="100"
        android:title="@string/easy"
        app:showAsAction="never"/>
    <item
        android:id="@+id/medium"
        android:orderInCategory="100"
        android:title="@string/medium"
        app:showAsAction="never"/>
    <item
        android:id="@+id/hard"
        android:orderInCategory="100"
        android:title="@string/hard"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu"
        android:orderInCategory="100"
        android:title="@string/menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reset"
        android:orderInCategory="100"
        android:title="@string/reset"
        app:showAsAction="never"/>
</menu>
